--- a/FacturaVenta/Resources/pdf.html
+++ b/FacturaVenta/Resources/pdf.html
@@ -50,13 +50,13 @@
             <td style="width: 20%;" align="center">
                 <table class="border full-width">
                     <tr>
-                        <td align="center">@FECHA</td>
+                        <td align="center" style="border: 0 !important;">@FECHA</td>
                     </tr>
                     <tr>
-                        <td align="center">@CODIGO</td>
+                        <td align="center" style="color: red; border: 0 !important;">No. Fact. @CODIGO</td>
                     </tr>
                     <tr>
-                        <td align="center">@ESTADO</td>
+                        <td align="center" style="border: 0 !important;">@ESTADO</td>
                     </tr>
                 </table>
             </td>
@@ -95,11 +95,11 @@
                                 </thead>
                                 <tbody>
                                     @FILA
-                                    <tr>
-                                        <td align="center">@CANTIDAD</td>
-                                        <td style="border-bottom: 1px solid #000 !important;"></td>
-                                        <td style="border-bottom: 1px solid #000 !important;"></td>
-                                        <td align="center">@TOTAL</td>
+                                    <tr style="background-color: yellow;">
+                                        <td align="center"><b>@CANTIDAD</b></td>
+                                        <td style="border: 0 !important;"><B>TOTAL</B></td>
+                                        <td style="border: 0 !important;"></td>
+                                        <td align="center"><b>@TOTAL</b></td>
                                     </tr>
                                 </tbody>
                             </table>
