I have already exported to excel but I still need to design the invoice header.

--- a/FacturaVenta/Resources/pdf.html
+++ b/FacturaVenta/Resources/pdf.html
@@ -99,7 +99,7 @@
                                         <td align="center"><b>@CANTIDAD</b></td>
                                         <td style="border: 0 !important;"><B>TOTAL</B></td>
                                         <td style="border: 0 !important;"></td>
-                                        <td align="center"><b>@TOTAL</b></td>
+                                        <td align="center"><b>C$ @TOTAL</b></td>
                                     </tr>
                                 </tbody>
                             </table>
